// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sdkAwsS3 journey given: [journey] full lifecycle via bucket/key when: [t0] objects absent then: get.all returns empty 1`] = `[]`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via bucket/key when: [t0] objects absent then: get.one returns null 1`] = `null`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via bucket/key when: [t1] first object created then: get.all returns one object 1`] = `
[
  {
    "body": "text-a",
    "key": "<prefix>/a.txt",
  },
]
`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via bucket/key when: [t1] first object created then: get.one returns body 1`] = `"text-a"`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via bucket/key when: [t2] second object created then: get.all returns both objects 1`] = `
[
  {
    "body": "text-a",
    "key": "<prefix>/a.txt",
  },
  {
    "body": "text-b",
    "key": "<prefix>/b.txt",
  },
]
`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via bucket/key when: [t3] object updated then: get.one returns updated body 1`] = `"text-a-updated"`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via bucket/key when: [t4] object deleted then: get.all returns other object 1`] = `
[
  {
    "body": "text-b",
    "key": "<prefix>/b.txt",
  },
]
`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via bucket/key when: [t4] object deleted then: get.one returns null 1`] = `null`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via uri when: [t0] objects absent then: get.all returns empty 1`] = `[]`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via uri when: [t0] objects absent then: get.one returns null 1`] = `null`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via uri when: [t1] objects created via uri then: get.all returns both 1`] = `
[
  {
    "body": "text-c",
    "key": "<prefix>/c.txt",
  },
  {
    "body": "text-d",
    "key": "<prefix>/d.txt",
  },
]
`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via uri when: [t1] objects created via uri then: get.one returns body 1`] = `"text-c"`;

exports[`sdkAwsS3 journey given: [journey] full lifecycle via uri when: [t2] object deleted via uri then: get.one returns null 1`] = `null`;
